[gd_scene load_steps=16 format=4 uid="uid://dpkvtwbqutqty"]

[ext_resource type="Script" uid="uid://o0dx1jdukix2" path="res://Scripts/main_menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://d3niwtnprc4yq" path="res://Assests/BG.png" id="2"]
[ext_resource type="Texture2D" uid="uid://nyh4mj3sc3h6" path="res://Assests/SPARKLE.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b1amv24baydhs" path="res://Assests/KITDY.png" id="4"]
[ext_resource type="Texture2D" uid="uid://djhiq8vnwj6ou" path="res://Assests/UI.png" id="5"]
[ext_resource type="PackedScene" uid="uid://mgpa611gop12" path="res://Scenes/install_sounds.tscn" id="6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ce3w2"]
texture = ExtResource("5")
region_rect = Rect2(641, 839, 383, 127)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n45e2"]
texture = ExtResource("5")
region_rect = Rect2(641, 359, 383, 127)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_opfnp"]
texture = ExtResource("5")
region_rect = Rect2(641, 520, 383, 137)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yhxw7"]
texture = ExtResource("5")
region_rect = Rect2(40, 644, 182, 178)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cp0ys"]
texture = ExtResource("5")
region_rect = Rect2(283, 646, 187, 174)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_trj04"]
texture = ExtResource("5")
region_rect = Rect2(962, 1148, 53, 52)

[sub_resource type="Animation" id="Animation_opfnp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(639, 306)]
}

[sub_resource type="Animation" id="Animation_n45e2"]
resource_name = "bouncing_title"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(639, 306), Vector2(639, 385), Vector2(639, 305), Vector2(639, 385), Vector2(639, 305)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cp0ys"]
_data = {
&"RESET": SubResource("Animation_opfnp"),
&"bouncing_title": SubResource("Animation_n45e2")
}

[node name="main_menu" type="Node2D"]
script = ExtResource("1")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(640.5, 359)
scale = Vector2(0.670312, 0.672222)
texture = ExtResource("2")

[node name="sparkle" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.552941)
position = Vector2(641.5, 359)
scale = Vector2(0.67, 0.67)
texture = ExtResource("3")

[node name="title" type="Sprite2D" parent="."]
position = Vector2(639, 306)
scale = Vector2(0.568056, 0.568056)
texture = ExtResource("4")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.14902)
offset_left = -119.0
offset_top = -101.0
offset_right = 1425.0
offset_bottom = 811.0
color = Color(0, 0, 0, 1)

[node name="menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="menu"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 293.0
offset_top = 30.0
offset_right = 978.0
offset_bottom = 170.625
grow_horizontal = 2
theme_override_font_sizes/font_size = 150
text = "MAIN MENU"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="menu"]
custom_minimum_size = Vector2(567, 567)
layout_mode = 0
offset_left = 349.0
offset_top = 310.0
offset_right = 917.0
offset_bottom = 877.0

[node name="VBoxContainer" type="VBoxContainer" parent="menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="start" type="Button" parent="menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = SubResource("StyleBoxTexture_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_n45e2")
theme_override_styles/normal = SubResource("StyleBoxTexture_opfnp")
text = "START GAME"

[node name="levels" type="Button" parent="menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = SubResource("StyleBoxTexture_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_n45e2")
theme_override_styles/normal = SubResource("StyleBoxTexture_opfnp")
text = "LEVELS LIST "

[node name="settings" type="Button" parent="menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = SubResource("StyleBoxTexture_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_n45e2")
theme_override_styles/normal = SubResource("StyleBoxTexture_opfnp")
text = "SETTINGS"

[node name="blep" type="Button" parent="menu"]
layout_mode = 0
offset_left = 1178.0
offset_top = 621.0
offset_right = 1280.0
offset_bottom = 721.0
theme_override_styles/hover = SubResource("StyleBoxTexture_yhxw7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cp0ys")
theme_override_styles/normal = SubResource("StyleBoxTexture_yhxw7")

[node name="quit" type="Button" parent="menu"]
layout_mode = 0
offset_left = 1224.0
offset_right = 1280.0
offset_bottom = 53.0
theme_override_styles/hover = SubResource("StyleBoxTexture_trj04")
theme_override_styles/pressed = SubResource("StyleBoxTexture_trj04")
theme_override_styles/normal = SubResource("StyleBoxTexture_trj04")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cp0ys")
}
autoplay = "bouncing_title"

[node name="InstallSounds" parent="." instance=ExtResource("6")]
root_path = NodePath("..")

[connection signal="pressed" from="menu/MarginContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="menu/MarginContainer/VBoxContainer/levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="menu/MarginContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="menu/blep" to="." method="_on_blep_pressed"]
[connection signal="pressed" from="menu/quit" to="." method="_on_quit_pressed"]
